# aenigma-android

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  logo.paint  settings.gradle
app/: build.gradle  proguard-rules.pro
app/schemas/ro.aenigma.data.database.AppDatabase/: 1.json  2.json  3.json  4.json
app/src/androidTest/java/com/example/enigma/: CryptoContextTests.kt  CryptoProviderTests.kt  ExampleInstrumentedTest.kt  OnionBuilderTests.kt
app/src/androidTest/java/ro/aenigma/: AddContactsScreenshots.kt  ChatScreenshots.kt  ContactsScreenshots.kt  FeedScreenshots.kt  ScreenshotBase.kt
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  build-install-libaenigma7.sh  compile-openssl.sh  cryptography-wrapper.cc  libaenigma-wrapper.cc  make-openssl.sh
app/src/main/cpp/include/cryptography/exceptions/: InvalidKey.hh
app/src/main/java/com/example/enigma/: AddContactsFragment.kt  ChatsFragment.kt  MainActivity.kt  MyApplication.kt
app/src/main/java/ro/aenigma/: AenigmaApp.kt  MyApplication.kt
app/src/main/java/ro/aenigma/activities/: AppActivity.kt
app/src/main/java/ro/aenigma/crypto/: AddressExtensions.kt  Base64Extensions.kt  CryptoProvider.kt  HashExtensions.kt  KeyGenerator.kt  KeysHelper.kt  KeysManager.kt  OnionParsingService.kt  PublicKeyExtensions.kt  SignatureExtensions.kt  SignatureService.kt  StringExtensions.kt
app/src/main/java/ro/aenigma/data/: LocalDataSource.kt  Repository.kt  (+3 more)
app/src/main/res/drawable/: ic_app_foreground.xml  ic_copy.xml  ic_error.xml  ic_forward.xml  ic_group.xml  ic_json.xml  ic_message.xml  ic_qr_scanner.xml  ic_radio_button_unchecked.xml  ic_reply.xml  ic_timer.xml  ic_unknown_document.xml  round_transparent_shape.xml
app/src/main/res/layout/: activity_chat.xml  activity_main.xml  chat_item.xml  chats_item.xml  contact_item.xml  fragment_add_contacts.xml  fragment_chat.xml  fragment_chats.xml  fragment_contacts.xml  fragment_save_contact.xml  save_contact_bottom_sheet.xml
app/src/main/res/menu/: bottom_nav_menu.xml  fragment_contacts_toolbar_menu.xml
app/src/main/res/navigation/: nav.xml
app/src/main/res/raw/: apache_license_2_0  apache_v2_0_license  gnu_gpl_v3_0_license  lgpl_license_3_0
app/src/main/res/values/: ic_app_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ro-rRO/: strings.xml
app/src/main/res/xml/: network_security_config.xml
fastlane/: Appfile  Fastfile  README.md  Screengrabfile  report.xml
fastlane/metadata/android/: screenshots.html
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
gradle/wrapper/: gradle-wrapper.properties
(+522 files in other folders)
